feat: 添加查询活动的几个接口
