# controller/activity.go
@@ -43,7 +43,7 @@ func CreateActivity(c *gin.Context) {
 // @Accept application/json
 // @Produce application/json
 // @Param Token header string true "用户令牌"
-// @Param Query query string true "id"
+// @Param id query string true "活动id"
 // @Param JSON body dto.Activity true " "
 // @Router /auth/activity [put]
 func UpdateActivity(c *gin.Context) {
@@ -81,7 +81,7 @@ func UpdateActivity(c *gin.Context) {
 // @Accept application/json
 // @Produce application/json
 // @Param Token header string true "用户令牌"
-// @Param Query query string true "id"
+// @Param id query string true "活动id"
 // @Router /auth/activity [delete]
 func DeleteActivity(c *gin.Context) {
 	idInt, err := strconv.Atoi(c.Query("id"))
@@ -103,6 +103,124 @@ func DeleteActivity(c *gin.Context) {
 	}
 
 	RespondSuccess(c, nil)
+	return
+}
+
+// @Summary 获取活动详情
+// @Tags 活动系统
+// @Produce application/json
+// @Param id query string true "活动id"
+// @Router /activity [get]
+func RetrieveActivity(c *gin.Context) {
+	idInt, err := strconv.Atoi(c.Query("id"))
+	if err != nil || idInt <= 0 {
+		RespondError(c, service.ErrorCommitData)
+		return
+	}
+
+	data, code := service.RetrieveActivity(uint(idInt))
+	if code != 0 {
+		RespondError(c, code)
+		return
+	}
+
+	RespondSuccess(c, data)
+	return
+}
+
+// @Summary 分页获取未开始的活动列表
+// @Tags 活动系统
+// @Produce application/json
+// @Param pre query string true "上一次调用本接口得到的活动列表的最后一个活动的开始时间戳，第一次调用用当前时间戳"
+// @Router /not-start-activity [get]
+func RetrieveActivityNotStart(c *gin.Context) {
+	pre, err := strconv.Atoi(c.Query("pre"))
+	if err != nil || pre <= 0 {
+		RespondError(c, service.ErrorCommitData)
+		return
+	}
+
+	data, code := service.RetrieveActivityListNotStart(pre)
+	if code != 0 {
+		RespondError(c, code)
+		return
+	}
+
+	RespondSuccess(c, data)
+	return
+}
+
+// @Summary 分页获取正在进行的活动列表
+// @Tags 活动系统
+// @Produce application/json
+// @Param pre query string true "上一次调用本接口得到的活动列表的最后一个活动的开始时间戳，第一次调用用当前时间戳"
+// @Param now query string true "当前时间戳"
+// @Router /during-activity [get]
+func RetrieveActivityDuring(c *gin.Context) {
+	now, err := strconv.Atoi(c.Query("now"))
+	if err != nil || now <= 0 {
+		RespondError(c, service.ErrorCommitData)
+		return
+	}
+
+	pre, err := strconv.Atoi(c.Query("pre"))
+	if err != nil || pre <= 0 {
+		RespondError(c, service.ErrorCommitData)
+		return
+	}
+
+	data, code := service.RetrieveActivityListDuring(now, pre)
+	if code != 0 {
+		RespondError(c, code)
+		return
+	}
+
+	RespondSuccess(c, data)
+	return
+}
+
+// @Summary 分页获取历史活动列表
+// @Tags 活动系统
+// @Produce application/json
+// @Param pre query string true "上一次调用本接口得到的活动列表的最后一个活动的结束时间戳，第一次调用用当前时间戳"
+// @Router /ended-activity [get]
+func RetrieveActivityEnded(c *gin.Context) {
+	pre, err := strconv.Atoi(c.Query("pre"))
+	if err != nil || pre <= 0 {
+		RespondError(c, service.ErrorCommitData)
+		return
+	}
+
+	data, code := service.RetrieveActivityListEnded(pre)
+	if code != 0 {
+		RespondError(c, code)
+		return
+	}
+
+	RespondSuccess(c, data)
+	return
+}
+
+// @Summary 分页获取推荐活动列表
+// @Tags 活动系统
+// @Produce application/json
+// @Param pre query string true "上一次调用本接口得到的活动列表的最后一个活动的开始时间戳，第一次调用用当前时间戳"
+// @Router /recommend-activity [get]
+func RetrieveActivityRecommend(c *gin.Context) {
+	pre, err := strconv.Atoi(c.Query("pre"))
+	if err != nil || pre <= 0 {
+		RespondError(c, service.ErrorCommitData)
+		return
+	}
+
+	//TODO 暂时用未进行活动，以后改其它
+	data, code := service.RetrieveActivityListRecommend(pre)
+	if code != 0 {
+		RespondError(c, code)
+		return
+	}
+
+	RespondSuccess(c, data)
 	return
 }
 
